# gpt-twttr-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  example.env  tweets.db
src/: ai.rs  db.rs  main.rs
src/ai/: ai.rs  gpt2.rs  gptj.rs  gptneo.rs  mod.rs
