[package]
name = "gpt-twttr-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.16"
gptj = { git="https://github.com/chriamue/gpt-j-ru.git" }
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
